x86_32 build failures after JDK-8211029 (Have a common set of enabled warnings for all native libraries)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 12
    • Affects Version/s: 12
    • Component/s: hotspot
    • None
    • b14
    • x86

        x86_32:

        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_FLOAT' not handled in switch [-Werror=switch]
           switch (type) {
                  ^
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_DOUBLE' not handled in switch [-Werror=switch]
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_LONG' not handled in switch [-Werror=switch]
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_OBJECT' not handled in switch [-Werror=switch]
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_ARRAY' not handled in switch [-Werror=switch]
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_VOID' not handled in switch [-Werror=switch]
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_ADDRESS' not handled in switch [-Werror=switch]
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_NARROWOOP' not handled in switch [-Werror=switch]
        /home/shade/jdk-jdk/src/hotspot/cpu/x86/jniFastGetField_x86_32.cpp:129:10: error: enumeration value 'T_METADATA' not handled in switch [-Werror=switch]
           ... (rest of output omitted)

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

                Created:
                Updated:
                Resolved: