8211274: x86_32 build failures after JDK-8211029 (Have a common set of enabled warnings for all native libraries)

Reviewed-by: dholmes, tschatzl